	Red Alert:
		Chinook rotors now counter-rotate.
		Transports will now open their doors when at shore.
		Tanya can now plant C4 on bridges.
		Submarine torpedoes can now hit bridges when force fired.
		Increased torpedo splash damage and raised multiplier vs. concrete.
		Fixed transparency glitches in the sniper icon.
		Removed health bars and selection boxes from walls.
		Flak Truck has been renamed to Mobile Flak.
		Fixed Tanya being unavailable after using the Chronosphere on a vehicle she is in.
		Tanya can now plant C4 on vehicles.
		Parachute bomb air strike will reveal the whole target area.
		Adjusted AA Guns to fire their guns alternately at a high fire rate, and added contrails to their bullets.
		Decreased AA Gun ZSU-23 damage from 25 to 12.
		Increased SAM Site power cost from -20 to -40.
		Decreased SAM Site Nike damage from 100 to 50.
		Increased Radar Dome cost from 1600 to 1800.
		Added a snow variation of the Allied Barracks by Kilkakon.
		Added a desert variation of the Allied Barracks by Kilkakon.
		Added a desert variation of the Missile Silo by Kilkakon.
		Removed the temperate shellmap and improved the design and performance of the desert shellmap.
		Removed the hardcoded missions. These will be later reimplemented.
		Removed maps: Battle Lake, Crossing the River, Doughnut Hole, Ice Woods, Island Hoppers (KOTH), Mad Scramble, Nishnekolymsk, Strip Mine
		Fixed spies staying on the minimap after infiltration.
		Added maps: Blitzkrieg and Burlesca by s1w.
		Both Allied and Soviet factions now build general-purpose mines instead of AT and AP mines respectively.
		Added new attack-move cursor artwork.
		Added Phase Transport, an Allied high-tech infantry transport which can cloak.
		Attack Dogs, Snipers, Mobile Radar Jammers, Camo Pillboxes, Phase Transports, Radar Domes, and Spy Planes can now detect cloaked units.
		Removed the submarine detection ability from Cruiser and Transport.